# hivemind

./: Cargo.toml  LICENSE  README.md
crates/hivemind-cli/: Cargo.toml
crates/hivemind-cli/src/: main.rs
crates/hivemind-cli/src/commands/: chat.rs  complete.rs  config.rs  init.rs  mod.rs  status.rs
crates/hivemind-cli/src/ui/: chat_tui.rs  mod.rs  spinner.rs
crates/hivemind-core/: Cargo.toml
crates/hivemind-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/hivemind-daemon/: Cargo.toml
crates/hivemind-daemon/src/: lib.rs  main.rs  node.rs  orchestrator.rs  scheduler.rs  server.rs  services.rs
crates/hivemind-daemon/tests/: e2e.rs
crates/hivemind-ledger/: Cargo.toml
crates/hivemind-ledger/src/: accounting.rs  lib.rs  reputation.rs  wallet.rs
crates/hivemind-network/: Cargo.toml
crates/hivemind-network/src/: coverage.rs  failover.rs  grpc.rs  health.rs  lib.rs  peer.rs  pipeline.rs  survival.rs  transport.rs
crates/hivemind-proto/: Cargo.toml  build.rs
crates/hivemind-proto/src/: lib.rs
crates/hivemind-shard/: Cargo.toml
crates/hivemind-shard/src/: checkpoint.rs  engine.rs  hardware.rs  inference.rs  lib.rs  loader.rs
proto/: activations.proto  discovery.proto  routing.proto  tokens.proto
tests/fixtures/: test_config.toml
tests/integration/: pipeline_test.rs  shard_test.rs
