[package]
name = "hivemind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hivemind"
path = "src/main.rs"

[dependencies]
hivemind-core    = { workspace = true }
hivemind-shard   = { workspace = true }
hivemind-network = { workspace = true }
hivemind-ledger  = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
clap             = { workspace = true }
ratatui          = { workspace = true }
crossterm        = { workspace = true }
serde            = { workspace = true }
toml             = { workspace = true }
uuid             = { workspace = true }
dirs             = { workspace = true }
