[package]
name = "hivemind-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
uuid       = { workspace = true }
dirs       = { workspace = true }
chrono     = { workspace = true }
