[package]
name = "hivemind-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hivemind-daemon"
path = "src/main.rs"

[dependencies]
hivemind-core    = { workspace = true }
hivemind-shard   = { workspace = true }
hivemind-network = { workspace = true }
hivemind-ledger  = { workspace = true }
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tonic            = { workspace = true }
serde            = { workspace = true }
