[package]
name = "hivemind-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hivemind-core = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
libp2p        = { workspace = true }
uuid          = { workspace = true }
