[package]
name = "hivemind-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hivemind-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build         = { workspace = true }
protoc-bin-vendored = { workspace = true }
