[package]
name = "hivemind-shard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hivemind-core = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
nvml-wrapper  = { workspace = true }
sysinfo       = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
